Organice el proyecto, agregue componentes y estilos.Incorpore sass al proyecto.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
+#navBar {
+  background-color: #47b8d6;
+  color: white;
+  min-height: 30px;
+  line-height: 30px;
+  border-bottom: 1px solid white;
+}
+#navBar ul {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#navBar li {
+  margin-left: 20px;
+  margin-right: 20px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  margin: 0px auto;
+  padding: 0px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
