--- a/src/components/components-css/_logo.scss
+++ b/src/components/components-css/_logo.scss
@@ -1,11 +1,12 @@
 @mixin brandElements {
-    float: left;
-    margin-left: 200px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #fdeb88;
-    text-shadow: 5px 1px 3px #60490f;
-  }
+  float: left;
+  margin-left: 200px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #fdeb88;
+  text-shadow: 5px 1px 3px #60490f;
+}
 
-  #brand {
-    @include brandElements();
-  }
+#brand {
+  @include brandElements();
+}
