--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @use "./components/components-css/cartWidget";
 @use "./components/components-css/logo";
 @use "./components/components-css/itemListContainer";
+@use "./components/components-css/header";
+@use "./components/components-css/search";
 
 * {
   margin: 0px auto;
