--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   -webkit-border-radius: 50%;
   border-radius: 50%;
   background: red;
-  top: 2px;
+  top: 87px;
   margin-left: 15px;
   text-align: center;
 }
@@ -70,6 +70,56 @@
   text-align: center;
   line-height: 200px;
   font-size: 25px;
+}
+
+#header {
+  width: 100%;
+  height: 85px;
+  background-color: white;
+}
+
+#search {
+  width: 52%;
+  float: left;
+}
+
+#input-search {
+  width: 400px;
+  border-radius: 19px;
+  height: 35px;
+  float: right;
+  margin-top: 25px;
+  border: 1px solid #cdcccb;
+  color: #999999;
+  font-size: 16px;
+  font-family: poppins;
+  font-weight: 300;
+  padding: 0 10px !important;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+}
+
+#input-search:focus {
+  box-shadow: 0px 0px 10px lightskyblue;
+}
+
+#search-for {
+  background-color: #47b8d6;
+  width: 36px;
+  height: 36px;
+  border: 0 none;
+  border-radius: 20px;
+  cursor: pointer !important;
+  overflow: hidden;
+  position: absolute;
+  right: 48%;
+  top: 25px;
+}
+#search-for .fa-search {
+  color: white;
+  font-size: 22px;
+  line-height: 35px;
+  margin-left: 7px;
 }
 
 * {
