--- a/src/components/components-css/_logo.scss
+++ b/src/components/components-css/_logo.scss
@@ -1,9 +1,9 @@
-$font-satisfy: 'Satisfy', cursive;
+$satisfy: "Satisfy", cursive;
 
 @mixin brandElements {
   float: left;
   margin-left: 200px;
-  font-family: $font-satisfy;
+  font-family: $satisfy;
   color: wheat;
   text-shadow: 5px 1px 5px black;
   font-size: 25px;
