--- a/src/components/components-css/_search.scss
+++ b/src/components/components-css/_search.scss
@@ -18,6 +18,7 @@ $poppins: "Poppins", sans-serif;
   font-size: 22px;
   line-height: 35px;
   margin-left: 7px;
+  margin-top: 7px;
 }
 
 #search {
