Agregue material UI al proyecto, agregue componente card desde MUI

--- a/src/components/components-css/_product.scss
+++ b/src/components/components-css/_product.scss
@@ -1,3 +1,19 @@
 .card-w {
-  width: 18%;
+  width: 19%;
+}
+
+.price{
+  text-align: center;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.btn{
+  background-color: #47b8d6!important;
+  color: white!important;
+  font-Weight: normal!important;
+}
+
+.btn:hover{
+  color: black!important;
 }
