--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @use "./components/components-css/header";
 @use "./components/components-css/search";
 @use "./components/components-css/product";
+@use "./components/components-css/ItemCount";
 
 * {
   margin: 0px auto;
