--- a/src/components/components-css/_itemListContainer.scss
+++ b/src/components/components-css/_itemListContainer.scss
@@ -3,3 +3,10 @@
   line-height: 200px;
   font-size: 25px;
 }
+
+#p-greeting {
+  text-align: center;
+  font-size: 25px;
+  margin: 20px;
+  margin-top: 3em;
+}
