--- a/src/components/components-css/_product.scss
+++ b/src/components/components-css/_product.scss
@@ -2,18 +2,26 @@
   width: 19%;
 }
 
-.price{
+.price {
   text-align: center;
   font-size: 23px;
   font-weight: bold;
 }
 
-.btn{
-  background-color: #47b8d6!important;
-  color: white!important;
-  font-Weight: normal!important;
+.btn {
+  background-color: #47b8d6 !important;
+  color: white !important;
+  font-weight: normal !important;
 }
 
-.btn:hover{
-  color: black!important;
+.btn:hover {
+  color: black !important;
+}
+
+.box-in-product{
+  margin-bottom: 10px;
+}
+
+#alert{
+  margin-left: -60px;
 }
