--- a/src/components/components-css/_product.scss
+++ b/src/components/components-css/_product.scss
@@ -18,10 +18,16 @@
   color: black !important;
 }
 
-.box-in-product{
+.box-in-product {
   margin-bottom: 10px;
 }
 
-#alert{
+#alert {
   margin-left: -60px;
+}
+
+hr {
+  border: none;
+  height: 1px;
+  background-color: #e1e1e1;
 }
