Cree un flujo entre los componentes ItemListContainer,ItemList e Item para dividir tareas entre componentes.Agregue un mockApi.json como para simular el llamado a una api con Promise.

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,11 @@ hr {
   border: none !important;
 }
 
+#layout {
+  display: inline-flex;
+  width: auto;
+}
+
 * {
   margin: 0px auto;
   padding: 0px auto;
