--- a/src/components/components-css/_itemList.scss
+++ b/src/components/components-css/_itemList.scss
@@ -1,4 +1,6 @@
-#layout {
-  display: inline-flex;
-  width: auto;
+#layout{
+    width: 64%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
