Avanzando con el proyecto, agregue react router doom, agregue vistas de la navBar, agregue spinner.

--- a/src/components/components-css/_logo.scss
+++ b/src/components/components-css/_logo.scss
@@ -7,6 +7,7 @@ $satisfy: "Satisfy", cursive;
   color: wheat;
   text-shadow: 5px 1px 5px black;
   font-size: 25px;
+  text-decoration: none
 }
 
 #brand {
