--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@
 #navBar ul {
   text-align: center;
 }
-#navBar li {
+#navBar ul a {
+  color: white;
+}
+#navBar .li {
   padding: 0 18px;
   display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
@@ -15,7 +18,7 @@
   font-size: 17px;
   cursor: pointer;
 }
-#navBar li:hover {
+#navBar .li:hover {
   background-color: white;
   color: #47b8d6;
 }
@@ -32,6 +35,7 @@
   color: wheat;
   text-shadow: 5px 1px 5px black;
   font-size: 25px;
+  text-decoration: none;
 }
 
 #catalogs {
@@ -138,20 +142,18 @@ hr {
   border: none !important;
 }
 
-#layout {
-  width: 64%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
 * {
   margin: 0px auto;
   padding: 0px auto;
+  text-decoration: none;
 }
 
 .wrap {
   width: 70%;
+}
+
+#itemDetail{
+  margin-top: 100px;
 }
 
 /*# sourceMappingURL=App.css.map */
