Cambie el estilo del item en la Home, saque el itemCount y agregue un boton comprar.Le di un estado a itemDetail sobre itemCount,este mismo  desaparece al agregar el procucto  al carrito.

--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,12 @@ hr {
   border: none !important;
 }
 
+.layout {
+  display: flex;
+  background-color: gainsboro;
+  align-items: center;
+}
+
 * {
   margin: 0px auto;
   padding: 0px auto;
