Agregue Context al proyecto, le di funcionalidad dinamica al onAdd, ahora agrega un producto a la lista de items dentro del carrito. Implemente funcionalidades como removeItem, isInCart, addItem, clear, todo dentro de productsContext.

--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,11 @@ hr {
   background-color: #47b8d6;
 }
 
+
+#btn-quitar:hover{
+  background-color: #c16262;
+}
+
 .btn-card:hover {
   border: none !important;
 }
