--- a/src/App.css
+++ b/src/App.css
@@ -137,11 +137,6 @@ hr {
   background-color: #47b8d6;
 }
 
-
-#btn-quitar:hover{
-  background-color: #c16262;
-}
-
 .btn-card:hover {
   border: none !important;
 }
@@ -152,6 +147,114 @@ hr {
   align-items: center;
 }
 
+.wrap-box {
+  width: 65%;
+}
+
+form {
+  margin-bottom: 10px;
+}
+
+.input-form {
+  width: 98%;
+  margin-top: 20px;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid #dddcdc;
+  color: #6d6d6d;
+}
+
+#p-box {
+  font-family: Roboto, sans-serif;
+  color: #999;
+  font-size: 16px;
+}
+
+#p-select {
+  float: left;
+}
+
+#title-box {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+  font-size: 26px;
+  font-family: Roboto, sans-serif;
+}
+
+#div-select {
+  float: left;
+  margin-left: 20px;
+}
+#div-select select {
+  float: left;
+  width: 100%;
+  height: 40px;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  outline: none;
+}
+
+#div-date {
+  float: left;
+}
+#div-date input {
+  float: left;
+  width: 100%;
+  height: 35px;
+  background-color: #e9e9ed;
+  border: 1px solid #e0e0e0;
+  outline: none;
+}
+
+.text-resume {
+  float: left;
+  margin-left: 20px;
+}
+
+.price-resume {
+  float: right;
+  margin-right: 20px;
+}
+
+#total-price-resume {
+  color: #0fabd4;
+  font-size: 20px;
+}
+
+#btn-form {
+  color: white;
+  background-color: #47b8d6;
+  border: none;
+  border-radius: 10px;
+  width: 60%;
+  height: 40px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+#btn-form:hover {
+  box-shadow: 0px 1px 3px 1px #9b9b9b;
+}
+
+#btn-form-disable {
+  color: #6d6d6d;
+  background-color: #dddcdc;
+  border: none;
+  border-radius: 10px;
+  width: 60%;
+  height: 40px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+#btn-resume {
+  margin-top: 20px;
+  background-color: #47b8d6;
+}
+
 * {
   margin: 0px auto;
   padding: 0px auto;
@@ -160,6 +263,11 @@ hr {
 
 .wrap {
   width: 70%;
+}
+
+.clearFix {
+  clear: both;
+  float: none;
 }
 
 /*# sourceMappingURL=App.css.map */
