--- a/src/App.css
+++ b/src/App.css
@@ -141,10 +141,17 @@ hr {
   border: none !important;
 }
 
-.layout {
+#layout {
   display: flex;
-  background-color: gainsboro;
-  align-items: center;
+  width: 50%;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.box {
+  border: 1px solid #f0f0f0;
+  text-align: center;
+  margin: 0px;
 }
 
 .wrap-box {
