--- a/src/components/item/_item.scss
+++ b/src/components/item/_item.scss
@@ -14,6 +14,11 @@
   color: black !important;
 }
 
+#btn-add {
+  margin-top: 10px;
+  background-color: #47b8d6;
+}
+
 .box-in-product {
   margin-bottom: 10px;
 }
