--- a/src/components/itemCount/_ItemCount.scss
+++ b/src/components/itemCount/_ItemCount.scss
@@ -6,3 +6,36 @@
 .btn-card:hover {
   border: none !important;
 }
+
+// ITEMCOUNT
+
+#btn-itemCount-add {
+  background: url("https://static.cotodigital3.com.ar/sitios/cdigi/static/content/images/cdigi/touch_right.png")
+    no-repeat !important;
+  width: 43px;
+  height: 38px;
+  display: inline-block;
+  cursor: pointer !important;
+}
+
+#btn-itemCount-subtract {
+  background: url("https://static.cotodigital3.com.ar/sitios/cdigi/static/content/images/cdigi/touch_left.png")
+    no-repeat !important;
+  width: 43px;
+  height: 38px;
+  display: inline-block;
+  cursor: pointer !important;
+  margin-right: 1px;
+}
+
+#box-initial {
+  display: inline-block;
+  width: 36px;
+  height: 35px;
+  margin-right: 4px;
+  font-size: 16px;
+  text-align: center;
+  background: white;
+  border: 1px solid #ccc;
+  margin-left: 10px;
+}
