--- a/src/components/itemCount/_ItemCount.scss
+++ b/src/components/itemCount/_ItemCount.scss
@@ -30,7 +30,7 @@
 
 #box-initial {
   display: inline-block;
-  width: 36px;
+  width: 50px;
   height: 35px;
   margin-right: 4px;
   font-size: 16px;
@@ -38,4 +38,5 @@
   background: white;
   border: 1px solid #ccc;
   margin-left: 10px;
+  padding-top: 13px;
 }
