--- a/src/App.css
+++ b/src/App.css
@@ -190,76 +190,6 @@ hr {
   margin: 0px;
 }
 
-.small-cart {
-  width: 50%;
-  border: 1px solid gainsboro;
-  padding: 29px;
-  height: 249px;
-  overflow: auto;
-}
-
-#title-small-cart {
-  text-align: center;
-  background-color: #094360;
-  color: white;
-  font-size: 13px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  width: 68%;
-  height: 45px;
-  line-height: 45px;
-}
-#title-small-cart span {
-  float: right;
-  margin-right: 15px;
-}
-
-#p-cart {
-  font-size: 16px;
-  text-align: center;
-  color: #333;
-  font-weight: normal;
-}
-
-#clear-small-cart {
-  border: none;
-  text-align: center;
-  outline: 0;
-  text-decoration: underline;
-  color: #333;
-  cursor: pointer;
-  background: none;
-  padding: 4px 0px;
-  border-left: 1px solid #e1e1e1;
-  border-right: 1px solid #e1e1e1;
-  border-bottom: 1px solid #e1e1e1;
-  width: 68%;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  padding-bottom: 8px;
-}
-#clear-small-cart hr {
-  width: 35%;
-  margin-bottom: 5px;
-}
-
-#total-p {
-  display: block;
-  color: #333;
-  font-size: 16px;
-  font-weight: bold;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 20px;
-  border-left: 1px solid gainsboro;
-  border-right: 1px solid gainsboro;
-  width: 68%;
-  padding-top: 20px;
-}
-#total-p span {
-  color: red;
-}
-
 .wrap-box {
   width: 65%;
 }
@@ -367,6 +297,133 @@ form {
   width: 70%;
   margin-top: 20px;
   background-color: #47b8d6;
+}
+
+#small-cart {
+  width: 70%;
+  height: 309px;
+}
+
+#small-cart-cleansed {
+  border: 1px solid gainsboro;
+  height: 309px;
+}
+
+#list-small-cart {
+  border: 1px solid gainsboro;
+  height: 249px;
+  overflow: auto;
+}
+
+#title-small-cart {
+  text-align: center;
+  background-color: #094360;
+  color: white;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 45px;
+  line-height: 45px;
+}
+#title-small-cart span {
+  float: right;
+  margin-right: 15px;
+}
+
+#text-cart {
+  font-size: 16px;
+  text-align: center;
+  color: #333;
+  font-weight: normal;
+  margin-top: 40px;
+}
+
+#clear-small-cart {
+  border: none;
+  text-align: center;
+  outline: 0;
+  text-decoration: underline;
+  color: #333;
+  cursor: pointer;
+  background: none;
+  padding: 4px 0px;
+  border-left: 1px solid #e1e1e1;
+  border-right: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  padding-bottom: 8px;
+}
+#clear-small-cart hr {
+  width: 35%;
+  margin-bottom: 5px;
+}
+
+#total-small-cart {
+  display: block;
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 20px;
+  border-left: 1px solid gainsboro;
+  border-right: 1px solid gainsboro;
+  padding-top: 20px;
+}
+#total-small-cart span {
+  color: red;
+}
+
+#detail-container {
+  text-align: center;
+}
+
+#description-detail {
+  margin-top: 10px;
+  margin-left: 20px;
+  font-weight: 400;
+  padding-top: 0px;
+  font-family: "Source Sans Pro", sans-serif !important;
+  color: #34495e !important;
+  font-size: 33px;
+}
+
+#regular-price {
+  color: #2cad73;
+  font-size: 0.8rem;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  margin-top: 30px;
+  margin-bottom: 3px;
+}
+
+#price-detail {
+  font-size: 42px;
+  font-family: "Open Sans", sans-serif;
+}
+
+#stock-detail {
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: red;
+}
+
+.btn-detail {
+  margin-top: 30px !important;
+  width: 130px;
+  box-sizing: border-box;
+  float: right;
+  font-weight: 400;
+  background: #47b8d6 !important;
+  color: white;
+  font-size: 14px;
+  border-radius: 2px;
+  text-align: center;
+  cursor: pointer;
+  -webkit-appearance: none;
+  transition: all 0.3s ease 0s;
 }
 
 * {
