Se agrego itemCount a itemDetail.

--- a/src/components/itemDetail/_itemDetail.scss
+++ b/src/components/itemDetail/_itemDetail.scss
@@ -48,3 +48,9 @@
   -webkit-appearance: none;
   transition: all 0.3s ease 0s;
 }
+
+#itemCount-detail {
+  float: right;
+  margin-top: 20px;
+  margin-right: 25px;
+}
