--- a/src/App.css
+++ b/src/App.css
@@ -426,6 +426,12 @@ form {
   transition: all 0.3s ease 0s;
 }
 
+#itemCount-detail {
+  float: right;
+  margin-top: 20px;
+  margin-right: 25px;
+}
+
 * {
   margin: 0px auto;
   padding: 0px auto;
