Agregue itemCount a cada item del componente Cart.

--- a/src/App.css
+++ b/src/App.css
@@ -432,6 +432,11 @@ form {
   margin-right: 25px;
 }
 
+#price-item-cart {
+  margin-left: 58px;
+  font-size: 1em;
+}
+
 * {
   margin: 0px auto;
   padding: 0px auto;
