--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 @use "./components/views/CashBox/cashBox";
 @use "./components/smallCart/smallCart";
 @use "./components/itemDetail/itemDetail";
+@use "./components/productInCartView/productInCartView";
 
 * {
   margin: 0px auto;
