--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 @use "./components/smallCart/smallCart";
 @use "./components/itemDetail/itemDetail";
 @use "./components/productInCartView/productInCartView";
+@use "./components//itemSmallCart/itemSmallCart";
 
 * {
   margin: 0px auto;
