--- a/src/components/productInCartView/_productInCartView.scss
+++ b/src/components/productInCartView/_productInCartView.scss
@@ -1,4 +1,8 @@
-#price-item-cart{
-    margin-left: 58px;
-    font-size: 1em;
+#price-product-cart {
+  margin-left: 60px;
+  font-size: 1em;
+}
+
+#circularStatic {
+  margin-left: "60px";
 }
