--- a/src/components/productInCartView/_productInCartView.scss
+++ b/src/components/productInCartView/_productInCartView.scss
@@ -6,3 +6,11 @@
 #circularStatic {
   margin-left: "60px";
 }
+
+.stock {
+  text-transform: uppercase;
+  margin-top: 5px;
+  color: red;
+  text-align: center;
+  margin-left: 15px;
+}
