--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -17,7 +17,7 @@ $poppins: "Poppins", sans-serif;
   color: white;
   font-size: 22px;
   line-height: 35px;
-  margin-left: 7px;
+  margin-left: 3px;
   margin-top: 7px;
 }
 
@@ -27,7 +27,7 @@ $poppins: "Poppins", sans-serif;
 }
 
 #input-search {
-  width: 400px;
+  width: 40%;
   border-radius: 19px;
   height: 35px;
   float: right;
