--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
 }
 
 #input-search {
-  width: 400px;
+  width: 40%;
   border-radius: 19px;
   height: 35px;
   float: right;
@@ -98,7 +98,7 @@
   color: white;
   font-size: 22px;
   line-height: 35px;
-  margin-left: 7px;
+  margin-left: 3px;
   margin-top: 7px;
 }
 
@@ -129,6 +129,11 @@
 
 #alert {
   margin-left: -60px;
+}
+
+#item_price {
+  font-weight: bold;
+  font-size: 21px;
 }
 
 hr {
@@ -176,7 +181,7 @@ hr {
   padding-top: 13px;
 }
 
-#layout {
+.layout {
   display: flex;
   width: 100%;
   flex-direction: row;
@@ -188,6 +193,10 @@ hr {
   border: 1px solid #f0f0f0;
   text-align: center;
   margin: 0px;
+}
+
+.itemList {
+  width: 1%;
 }
 
 .wrap-box {
@@ -301,7 +310,7 @@ form {
 
 #small-cart {
   width: 70%;
-  height: 309px;
+  min-height: 309px;
 }
 
 #small-cart-cleansed {
@@ -410,22 +419,6 @@ form {
   color: red;
 }
 
-.btn-detail {
-  margin-top: 30px !important;
-  width: 130px;
-  box-sizing: border-box;
-  float: right;
-  font-weight: 400;
-  background: #47b8d6 !important;
-  color: white;
-  font-size: 14px;
-  border-radius: 2px;
-  text-align: center;
-  cursor: pointer;
-  -webkit-appearance: none;
-  transition: all 0.3s ease 0s;
-}
-
 #itemCount-detail {
   float: right;
   margin-top: 20px;
@@ -441,8 +434,41 @@ form {
   margin-left: "60px";
 }
 
+.stock {
+  text-transform: uppercase;
+  margin-top: 5px;
+  color: red;
+  text-align: center;
+  margin-left: 15px;
+}
+
 #itemCount-smallCart {
   margin-left: 5px;
+}
+
+#name_itemSmallCart {
+  font-weight: bold;
+  margin-bottom: 3px;
+  text-decoration: underline;
+}
+
+.btn-cart {
+  border: 1px solid #ccc;
+  background-color: white;
+  border-radius: 4px;
+  color: #545454;
+  margin-left: 10px;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.delete_cart_page {
+  background: url("https://static.cotodigital3.com.ar/sitios/cdigi/static/content/images/cdigi/ic_delete.png");
+  padding-left: 20px !important;
+}
+
+#spinner-itemDetailContainer {
+  margin-top: 30px;
 }
 
 * {
@@ -458,6 +484,31 @@ form {
 .clearFix {
   clear: both;
   float: none;
+}
+
+.list-title {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 3em;
+  margin-bottom: 40px;
+  float: left;
+}
+
+.btn-lightBlue {
+  margin-top: 30px !important;
+  width: 39%;
+  box-sizing: border-box;
+  float: left;
+  font-weight: 400;
+  background: #47b8d6 !important;
+  color: white;
+  font-size: 14px;
+  border-radius: 2px;
+  padding: 5px !important;
+  margin-left: 35px !important;
+  cursor: pointer;
+  -webkit-appearance: none;
+  transition: all 0.3s ease 0s;
 }
 
 /*# sourceMappingURL=App.css.map */
