--- a/src/components/itemSmallCart/_itemSmallCart.scss
+++ b/src/components/itemSmallCart/_itemSmallCart.scss
@@ -1,3 +1,9 @@
-#itemCount-smallCart{
-    margin-left: 5px;
+#itemCount-smallCart {
+  margin-left: 5px;
+}
+
+#name_itemSmallCart {
+    font-weight: bold;
+    margin-bottom: 3px;
+    text-decoration: underline;
 }
