Agregue una pagina home y un footer al proyecto.

--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -12,3 +12,7 @@
   background: url("https://static.cotodigital3.com.ar/sitios/cdigi/static/content/images/cdigi/ic_delete.png");
   padding-left: 20px !important;
 }
+
+.btn-pagar-cart:hover{
+  background-color: #0fabd4!important;
+}
