--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,9 @@
 @use "./components//itemSmallCart/itemSmallCart";
 @use "./components/Cart/cart";
 @use "./components/itemDetailContainer/itemDetailContainer";
+@use "./components/catalogs/Catalogs";
+@use "./components/footer/footer";
+
 
 * {
   margin: 0px auto;
@@ -54,4 +57,8 @@
   cursor: pointer;
   -webkit-appearance: none;
   transition: all 0.3s ease 0s;
+}
+
+.height-view{
+  min-height: 900px;
 }
