Separe en componentes CashBox, con los componentes Form y PurchaseSummary.

--- a/src/App.css
+++ b/src/App.css
@@ -186,115 +186,6 @@ hr {
   width: 1%;
 }
 
-.wrap-box {
-  width: 65%;
-}
-
-form {
-  margin-bottom: 10px;
-}
-
-.input-form {
-  width: 98%;
-  margin-top: 20px;
-  height: 30px;
-  border-radius: 10px;
-  border: 1px solid #dddcdc;
-  color: #6d6d6d;
-}
-
-#p-box {
-  font-family: Roboto, sans-serif;
-  color: #999;
-  font-size: 16px;
-}
-
-#p-select {
-  float: left;
-}
-
-#title-box {
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  line-height: 1.2;
-  font-size: 26px;
-  font-family: Roboto, sans-serif;
-}
-
-#div-select {
-  float: left;
-  margin-left: 20px;
-}
-#div-select select {
-  float: left;
-  width: 89%;
-  height: 40px;
-  background-color: white;
-  border: 1px solid #e0e0e0;
-  outline: none;
-}
-
-#div-date {
-  float: left;
-}
-#div-date input {
-  float: left;
-  width: 100%;
-  height: 35px;
-  background-color: #e9e9ed;
-  border: 1px solid #e0e0e0;
-  outline: none;
-}
-
-.text-resume {
-  float: left;
-  margin-left: 20px;
-}
-
-.price-resume {
-  float: right;
-  margin-right: 20px;
-}
-
-#total-price-resume {
-  color: #0fabd4;
-  font-size: 20px;
-}
-
-#btn-form {
-  color: white;
-  background-color: #47b8d6;
-  border: none;
-  border-radius: 10px;
-  width: 60%;
-  height: 40px;
-  margin-top: 20px;
-  cursor: pointer;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
-
-#btn-form:hover {
-  box-shadow: 0px 1px 3px 1px #9b9b9b;
-}
-
-#btn-form-disable {
-  color: #6d6d6d;
-  background-color: #dddcdc;
-  border: none;
-  border-radius: 10px;
-  width: 60%;
-  height: 40px;
-  margin-top: 20px;
-  cursor: pointer;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
-
-#btn-resume {
-  width: 70%;
-  margin-top: 20px;
-  background-color: #47b8d6;
-}
-
 #small-cart {
   width: 70%;
   min-height: 309px;
@@ -464,7 +355,7 @@ form {
 
 #catalogs {
   min-height: 1100px;
-  background: #f6f6f6;
+  background: #ecf1f7;
 }
 
 .grid-layout {
@@ -787,7 +678,7 @@ form {
 
 #footer {
   height: 95px;
-  background-color: #47b8d6;
+  background-color: #2aa9ca;
   margin: auto;
   width: 100%;
   text-align: center;
@@ -797,6 +688,115 @@ form {
   font-size: 23px;
   color: gainsboro;
   font-family: "Open Sans", sans-serif;
+}
+
+.wrap-box {
+  width: 65%;
+}
+
+form {
+  margin-bottom: 10px;
+}
+
+.input-form {
+  width: 98%;
+  margin-top: 20px;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid #dddcdc;
+  color: #6d6d6d;
+}
+
+#p-box {
+  font-family: Roboto, sans-serif;
+  color: #999;
+  font-size: 16px;
+}
+
+#p-select {
+  float: left;
+}
+
+#title-box {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+  font-size: 26px;
+  font-family: Roboto, sans-serif;
+}
+
+#div-select {
+  float: left;
+  margin-left: 20px;
+}
+#div-select select {
+  float: left;
+  width: 89%;
+  height: 40px;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  outline: none;
+}
+
+#div-date {
+  float: left;
+}
+#div-date input {
+  float: left;
+  width: 100%;
+  height: 35px;
+  background-color: #e9e9ed;
+  border: 1px solid #e0e0e0;
+  outline: none;
+}
+
+#btn-form {
+  color: white;
+  background-color: #47b8d6;
+  border: none;
+  border-radius: 10px;
+  width: 60%;
+  height: 40px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+#btn-form:hover {
+  box-shadow: 0px 1px 3px 1px #9b9b9b;
+}
+
+#btn-form-disable {
+  color: #6d6d6d;
+  background-color: #dddcdc;
+  border: none;
+  border-radius: 10px;
+  width: 60%;
+  height: 40px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+.text-resume {
+  float: left;
+  margin-left: 20px;
+}
+
+.price-resume {
+  float: right;
+  margin-right: 20px;
+}
+
+#total-price-resume {
+  color: #0fabd4;
+  font-size: 20px;
+}
+
+#btn-resume {
+  width: 70%;
+  margin-top: 20px;
+  background-color: #47b8d6;
 }
 
 * {
