--- a/src/components/catalogs/_catalogs.scss
+++ b/src/components/catalogs/_catalogs.scss
@@ -50,7 +50,7 @@
 
 #catalogs {
   min-height: 1100px;
-  background: rgb(246, 246, 246);
+  background: #ecf1f7;
 }
 
 // ------------------------------------------------------------Comidas-bebidas-------------------------------------------------------
