--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,6 +1,6 @@
 #footer {
   height: 95px;
-  background-color: #47b8d6;
+  background-color: #2aa9ca;
   margin: auto;
   width: 100%;
   text-align: center;
