--- a/src/components/itemList/_itemList.scss
+++ b/src/components/itemList/_itemList.scss
@@ -15,3 +15,13 @@
 .itemList{
   width: 1%;
 }
+
+.list-title {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 3em;
+  margin-bottom: 40px;
+  float: left;
+  color: lightcoral;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
