--- a/src/App.css
+++ b/src/App.css
@@ -40,21 +40,28 @@
 
 #header {
   width: 100%;
-  height: 85px;
+  height: 95px;
   background-color: white;
 }
 
+#header-img {
+  width: 4%;
+  height: 55px;
+  background-color: white;
+  margin-top: 20px;
+}
+
 #search {
-  width: 52%;
+  width: 61%;
   float: left;
 }
 
 #input-search {
-  width: 40%;
+  width: 35%;
   border-radius: 19px;
   height: 35px;
   float: right;
-  margin-top: 25px;
+  margin-top: 30px;
   border: 1px solid #cdcccb;
   color: #999999;
   font-size: 16px;
@@ -78,8 +85,8 @@
   cursor: pointer !important;
   overflow: hidden;
   position: absolute;
-  right: 48%;
-  top: 25px;
+  right: 39%;
+  top: 30px;
 }
 #search-for .fa-search {
   color: white;
