--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,5 +1,12 @@
 #header {
   width: 100%;
-  height: 85px;
+  height: 95px;
   background-color: white;
+}
+
+#header-img {
+  width: 4%;
+  height: 55px;
+  background-color: white;
+  margin-top: 20px;
 }
