--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -9,8 +9,8 @@ $poppins: "Poppins", sans-serif;
   cursor: pointer !important;
   overflow: hidden;
   position: absolute;
-  right: 48%;
-  top: 25px;
+  right: 39%;
+  top: 30px;
 }
 
 @mixin faSearchProperties {
@@ -22,23 +22,23 @@ $poppins: "Poppins", sans-serif;
 }
 
 #search {
-  width: 52%;
+  width: 61%;
   float: left;
 }
 
 #input-search {
-  width: 40%;
+  width: 35%;
   border-radius: 19px;
   height: 35px;
   float: right;
-  margin-top: 25px;
+  margin-top: 30px;
   border: 1px solid #cdcccb;
   color: #999999;
   font-size: 16px;
   font-family: poppins;
   font-weight: 300;
   padding: 0 10px !important;
-  font-family: $poppins;
+  font-family: "Poppins", sans-serif;
   outline: none;
 }
 
