--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ hr {
 }
 
 .item-list {
-  margin-left: 50px;
+  margin-left: 70px;
 }
 
 .box {
@@ -198,7 +198,7 @@ hr {
   font-size: 25px;
   margin-top: 3em;
   margin-bottom: 40px;
-  margin-left: 50px;
+  margin-left: 70px;
   float: left;
   color: lightcoral;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
@@ -412,7 +412,12 @@ hr {
   border: 0px;
   cursor: pointer;
   background-color: white;
-  border: 1px solid #eeeeee;
+  border: 1px solid #ddd;
+  transition: 150ms all;
+}
+
+.image-box:hover {
+  box-shadow: 2px 1px 5px 0px lightblue;
 }
 
 .fish {
@@ -448,7 +453,7 @@ hr {
   background-repeat: no-repeat;
   background-position: right !important;
   background-size: contain;
-  border: 1px solid #eeeeee;
+  border: 1px solid #e3e3e3;
 }
 
 .bakery {
@@ -458,7 +463,7 @@ hr {
   background-repeat: no-repeat;
   background-position: right !important;
   background-size: contain;
-  border: 1px solid #eeeeee;
+  border: 1px solid #e3e3e3;
 }
 
 .pasta {
@@ -468,7 +473,7 @@ hr {
   background-repeat: no-repeat;
   background-position: right !important;
   background-size: contain;
-  border: 1px solid #eeeeee;
+  border: 1px solid #e3e3e3;
 }
 
 #content-fish {
@@ -597,7 +602,7 @@ hr {
   margin-top: 50px;
   text-align: center;
   padding: 10px;
-  height: 400px;
+  min-height: 400px;
 }
 
 .electros {
@@ -923,6 +928,446 @@ form {
   font-size: 20px;
   line-height: 55px;
   padding-left: 10px;
+}
+
+@media (max-width: 1440px) {
+  #small-cart {
+    width: 90%;
+  }
+}
+@media (max-width: 1440px) {
+  .css-iv7vbz-MuiGrid-root {
+    margin-top: 0px;
+  }
+
+  #content-alcohol #p1-span {
+    margin-top: 10px;
+    margin-left: 0px;
+    width: 62%;
+  }
+
+  #content-alcohol #p2-span {
+    margin-top: 5px;
+    margin-left: 20px;
+    font-size: 15px;
+    width: 66%;
+  }
+}
+@media (max-width: 810px) {
+  .css-1pxusvs-MuiGrid-root {
+    margin-left: 150px !important;
+    padding-top: 30px;
+  }
+
+  #input-search {
+    width: 58%;
+    font-size: 18px;
+  }
+
+  #header-img {
+    width: 10%;
+  }
+
+  #search {
+    width: 67%;
+  }
+
+  #search-for {
+    right: 33%;
+  }
+
+  .css-1b7z8hn-MuiButtonBase-root-MuiIconButton-root {
+    float: none !important;
+    margin-left: 20px !important;
+  }
+
+  .css-iv7vbz-MuiGrid-root {
+    margin-top: 25px !important;
+  }
+
+  .list-title {
+    margin-left: 145px;
+  }
+
+  #footer #p-footer {
+    font-size: 19px;
+  }
+
+  .grid-layout {
+    grid-gap: 15px;
+  }
+
+  .wrap {
+    width: 90%;
+  }
+
+  #content-fish {
+    margin-left: -3%;
+    margin-top: -3px;
+  }
+
+  #content-fish #p1-span {
+    font-size: 14px;
+    background-color: #f3f5f7;
+    border-radius: 3px;
+    margin-top: -10%;
+    opacity: 0.8;
+    font-weight: bold;
+  }
+
+  #content-fish #p2-span {
+    font-size: 20px;
+    line-height: 16px;
+    background-color: #f3f5f7;
+    border-radius: 3px;
+    padding-bottom: 4px;
+    opacity: 0.8;
+    margin-bottom: 10px;
+  }
+
+  #content-fish #p3-span {
+    font-size: 12px;
+    margin-left: -16px;
+  }
+
+  #content-juices {
+    width: 26%;
+    margin-top: -3px;
+  }
+
+  #content-juices #p1-span {
+    color: #00bcd4;
+    font-size: 14px;
+    margin-top: 5px;
+    margin-left: 2px;
+    line-height: 15px;
+    background-color: #f3f5f7;
+    opacity: 0.8;
+    padding: 2px;
+    border-radius: 3px;
+  }
+
+  #content-juices #p2-span {
+    width: 55%;
+    font-size: 20px;
+    line-height: 15px;
+    margin-left: 8px;
+  }
+
+  #content-alcohol {
+    margin-top: -3px;
+    margin-left: -3px;
+  }
+
+  #content-alcohol #p1-span {
+    width: 100px;
+    font-size: 18px;
+    line-height: 18px;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+
+  #content-alcohol #p2-span {
+    font-size: 20px;
+    line-height: 17px;
+    margin-top: 8px;
+    margin-left: 13px;
+    width: 85%;
+  }
+
+  #content-delicatessen,
+#content-bakery,
+#content-pasta {
+    padding: 9px 12px 12px 15px;
+    margin-left: 0px;
+    margin-top: -10px;
+    margin-left: -10px;
+  }
+
+  #content-delicatessen #p-span,
+#content-bakery #p-span,
+#content-pasta #p-span {
+    font-size: 18px;
+    color: maroon;
+    line-height: 0px;
+    background-color: white;
+    opacity: 0.8;
+    border-radius: 6px;
+  }
+
+  .electros {
+    background-position: 27px 75px;
+    width: 99%;
+    margin: 0px;
+  }
+
+  #content-electros {
+    width: 92%;
+    margin-top: 155px;
+    padding: 15px 12px 12px 0px;
+  }
+
+  #content-electros #p1-span {
+    font-size: 25px;
+    margin-left: 12px;
+  }
+
+  .televisores {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+}
+@media (max-width: 414px) {
+  .css-1pxusvs-MuiGrid-root {
+    margin-left: 50px !important;
+  }
+
+  .grid-layout {
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 20px;
+    height: 1000px;
+  }
+
+  #navBar ul {
+    text-align: left;
+  }
+
+  .ul-navBar {
+    margin-left: -25px;
+  }
+
+  #search {
+    width: 76%;
+  }
+
+  #input-search {
+    width: 85%;
+    font-size: 15px;
+  }
+
+  #search-for {
+    right: 24%;
+  }
+
+  #header-img {
+    width: 17%;
+  }
+
+  #brand {
+    float: none;
+    margin-left: 114px;
+    font-size: 30px;
+    padding-top: 10px;
+  }
+
+  .div-navBar {
+    padding-top: 10px;
+  }
+
+  .ul-navBar {
+    margin-right: 22px;
+  }
+
+  #footer #p-footer {
+    line-height: 20px;
+    font-size: 14px;
+  }
+
+  #footer {
+    height: 65px;
+    padding-top: 21px;
+  }
+
+  .wrap {
+    width: 90%;
+  }
+
+  .fish {
+    grid-column: 1/7;
+    grid-row: 1/2;
+  }
+
+  #content-fish {
+    margin-left: -2%;
+    height: 125px;
+  }
+
+  #content-fish #p1-span {
+    font-size: 14px;
+    background-color: #f3f5f7;
+    border-radius: 3px;
+    margin-top: -10%;
+    opacity: 0.8;
+    font-weight: bold;
+  }
+
+  #content-fish #p2-span {
+    font-size: 20px;
+    line-height: 16px;
+    background-color: #f3f5f7;
+    border-radius: 3px;
+    padding-bottom: 4px;
+    opacity: 0.8;
+    margin-bottom: 10px;
+  }
+
+  #content-fish #p3-span {
+    font-size: 12px;
+    margin-left: -16px;
+  }
+
+  .juices {
+    grid-column: 1/7;
+    grid-row: 2/3;
+  }
+
+  #content-juices {
+    width: 50%;
+  }
+
+  #content-juices #p1-span {
+    color: #00bcd4;
+    font-size: 14px;
+    margin-top: 5px;
+    margin-left: 2px;
+    line-height: 15px;
+    background-color: #f3f5f7;
+    opacity: 0.8;
+    padding: 2px;
+    border-radius: 3px;
+  }
+
+  #content-juices #p2-span {
+    width: 55%;
+    font-size: 20px;
+    line-height: 15px;
+    margin-left: 8px;
+  }
+
+  .alcohol {
+    grid-column: 1/7;
+    grid-row: 3/4;
+  }
+
+  #content-alcohol #p1-span {
+    width: 100px;
+    font-size: 18px;
+    line-height: 18px;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+
+  #content-alcohol #p2-span {
+    font-size: 20px;
+    line-height: 17px;
+    margin-top: 8px;
+    margin-left: 13px;
+    width: 146%;
+  }
+
+  .delicatessen {
+    grid-column: 1/7;
+  }
+
+  .bakery {
+    grid-column: 1/7;
+    grid-row: 5/6;
+  }
+
+  .pasta {
+    grid-column: 1/7;
+    grid-row: 6/7;
+  }
+
+  #content-delicatessen,
+#content-bakery,
+#content-pasta {
+    padding: 9px 12px 12px 15px;
+    margin-left: 0px;
+  }
+
+  .image-box {
+    border: 1px solid #e3e3e3;
+  }
+
+  .grid-layout-electros {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-gap: 10px;
+    min-height: 400px;
+    margin-top: 5px;
+    padding-bottom: 40px;
+  }
+
+  #content-electros {
+    margin-top: 73px;
+    width: 58%;
+    float: left;
+    margin-left: 60px;
+    padding-top: 50px;
+  }
+
+  .electros {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    margin-right: 0px;
+    background-position: 57px 10px;
+    background-size: 70%;
+  }
+
+  #content-electros #p1-span {
+    font-size: 25px;
+  }
+
+  #content-electros #p2-span {
+    font-size: 21px;
+  }
+
+  .televisores {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .televisores #p-span,
+.heladeras #p-span,
+.climatizacion #p-span,
+.desayuno #p-span,
+.ventilacion #p-span,
+.cuidadoPersonal #p-span {
+    margin-top: 30px;
+    margin-left: 110px;
+  }
+
+  .item-list {
+    margin-left: 0px;
+  }
+
+  .css-1soc9cd-MuiPaper-root-MuiCard-root {
+    max-width: 100% !important;
+  }
+
+  .box {
+    margin-bottom: 30px;
+  }
+
+  .list-title {
+    margin-top: 2em;
+    margin-left: 50px;
+  }
+
+  .box {
+    width: 80%;
+    margin-left: 38px;
+  }
+}
+@media (max-width: 375px) {
+  .ul-navBar {
+    margin-right: 9px;
+  }
+
+  .list-title {
+    margin-left: 38px;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
