Eliminando bug card material.

--- a/src/App.css
+++ b/src/App.css
@@ -1359,6 +1359,10 @@ form {
     width: 80%;
     margin-left: 38px;
   }
+
+  .css-a4f2b1 {
+    max-width: 298px;
+  }
 }
 @media (max-width: 375px) {
   .ul-navBar {
