Sigue sin arreglarse el maldito bug.

--- a/src/App.css
+++ b/src/App.css
@@ -1372,6 +1372,10 @@ form {
   .list-title {
     margin-left: 38px;
   }
+
+  .css-a4f2b1 {
+    max-width: 298px !important;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
