Retocando SmallCart para que se vea bien en celular.

--- a/src/App.css
+++ b/src/App.css
@@ -931,13 +931,12 @@ form {
 }
 
 @media (max-width: 1440px) {
-  #small-cart {
-    width: 90%;
-  }
-}
-@media (max-width: 1440px) {
   .css-iv7vbz-MuiGrid-root {
     margin-top: 0px;
+  }
+
+  #small-cart {
+    width: 90%;
   }
 
   #content-alcohol #p1-span {
@@ -1115,6 +1114,11 @@ form {
   .televisores {
     grid-column: 3/4;
     grid-row: 1/2;
+  }
+
+  .css-1vb78ys {
+    margin-left: 120px !important;
+    margin-top: 50px !important;
   }
 }
 @media (max-width: 414px) {
@@ -1348,6 +1352,8 @@ form {
 
   .box {
     margin-bottom: 30px;
+    border: 1px solid #e6e6e6;
+    box-shadow: 1px 0px 3px 0px #d0d0d0;
   }
 
   .list-title {
@@ -1362,6 +1368,14 @@ form {
 
   .css-a4f2b1 {
     max-width: 298px !important;
+  }
+
+  .css-1vb78ys {
+    margin-left: 49px !important;
+  }
+
+  .css-7b8fbf {
+    margin-left: 10px !important;
   }
 }
 @media (max-width: 375px) {
